; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_SHAPE_GetFontLanguageTags.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_SHAPE_GetFontLanguageTags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@FALSE = common dso_local global i64 0, align 8
@TRUE = common dso_local global i64 0, align 8
@E_INVALIDARG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SHAPE_GetFontLanguageTags(i32 %0, %struct.TYPE_5__* %1, i32* %2, i32 %3, i32 %4, i32* %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_5__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i64, align 8
  store i32 %0, i32* %8, align 4
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32* %5, i32** %13, align 8
  store i32* %6, i32** %14, align 8
  store i32 0, i32* %16, align 4
  %18 = load i64, i64* @FALSE, align 8
  store i64 %18, i64* %17, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %21 = call i32 @load_ot_tables(i32 %19, %struct.TYPE_5__* %20)
  %22 = load i32*, i32** %10, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %24, label %34

24:                                               ; preds = %7
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %24
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = trunc i64 %32 to i32
  store i32 %33, i32* %16, align 4
  br label %34

34:                                               ; preds = %29, %24, %7
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %36 = load i32, i32* %11, align 4
  %37 = load i32, i32* %16, align 4
  %38 = load i32, i32* %12, align 4
  %39 = load i32*, i32** %13, align 8
  %40 = load i32*, i32** %14, align 8
  %41 = call i32 @OpenType_GetFontLanguageTags(%struct.TYPE_5__* %35, i32 %36, i32 %37, i32 %38, i32* %39, i32* %40)
  store i32 %41, i32* %15, align 4
  %42 = load i32, i32* %15, align 4
  %43 = call i64 @FAILED(i32 %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %54

45:                                               ; preds = %34
  %46 = load i64, i64* @TRUE, align 8
  store i64 %46, i64* %17, align 8
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %48 = call i32 @MS_MAKE_TAG(i8 signext 108, i8 signext 97, i8 signext 116, i8 signext 110)
  %49 = load i32, i32* %16, align 4
  %50 = load i32, i32* %12, align 4
  %51 = load i32*, i32** %13, align 8
  %52 = load i32*, i32** %14, align 8
  %53 = call i32 @OpenType_GetFontLanguageTags(%struct.TYPE_5__* %47, i32 %48, i32 %49, i32 %50, i32* %51, i32* %52)
  store i32 %53, i32* %15, align 4
  br label %54

54:                                               ; preds = %45, %34
  %55 = load i32, i32* %15, align 4
  %56 = call i64 @FAILED(i32 %55)
  %57 = icmp ne i64 %56, 0
  br i1 %57, label %61, label %58

58:                                               ; preds = %54
  %59 = load i64, i64* %17, align 8
  %60 = icmp ne i64 %59, 0
  br i1 %60, label %61, label %63

61:                                               ; preds = %58, %54
  %62 = load i32*, i32** %14, align 8
  store i32 0, i32* %62, align 4
  br label %63

63:                                               ; preds = %61, %58
  %64 = load i32, i32* %15, align 4
  %65 = call i64 @SUCCEEDED(i32 %64)
  %66 = icmp ne i64 %65, 0
  br i1 %66, label %67, label %75

67:                                               ; preds = %63
  %68 = load i64, i64* %17, align 8
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %75

70:                                               ; preds = %67
  %71 = load i32*, i32** %10, align 8
  %72 = icmp ne i32* %71, null
  br i1 %72, label %73, label %75

73:                                               ; preds = %70
  %74 = load i32, i32* @E_INVALIDARG, align 4
  store i32 %74, i32* %15, align 4
  br label %75

75:                                               ; preds = %73, %70, %67, %63
  %76 = load i32, i32* %15, align 4
  ret i32 %76
}

declare dso_local i32 @load_ot_tables(i32, %struct.TYPE_5__*) #1

declare dso_local i32 @OpenType_GetFontLanguageTags(%struct.TYPE_5__*, i32, i32, i32, i32*, i32*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @MS_MAKE_TAG(i8 signext, i8 signext, i8 signext, i8 signext) #1

declare dso_local i64 @SUCCEEDED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
